# project-euler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  playground.go
easy/: p001.go  p002.go  p006.go  p008.go  p011.rb  p013.go  p014.rb  p015.py  p016.go  p017.go  problem_003.go  problem_004.go  problem_005.go  problem_007.go  problem_009.go  problem_010.go  problem_012.go  problem_013.go  problem_014.rb  problem_4.go
junior/: p060.go  p061.cxx  p062.cxx  p062.py  p063.py  p064.cxx  p065.go  p067.go  p068.md  p069.go  p101.cxx  p101.lionel.m.py  p101.py  p102.go  p103.md  problem_060.go  problem_066.go
utils/: change_name.py  playground.go  primeFunc.go
